# RAG-AGENT

./: .env.example  .gitignore  CLAUDE.md  detailed_plan.md  langgraph.json  prd.md  pyproject.toml
docs/: DOCLING_INTEGRATION_PLAN.md
src/: __init__.py
src/agent/: __init__.py  agent.py  cache.py  graph.py  memory.py  nodes.py  react_agent.py  state.py  tools.py
src/api/: __init__.py
src/chunker/: __init__.py  content_cleaner.py  llamaindex_chunker.py  smart_chunker.py
src/config/: __init__.py  settings.py
src/crawler/: __init__.py  document_store.py  sitemap_parser.py  web_crawler.py
src/database/: __init__.py  operations.py  schema.sql  schema_fts.sql  supabase_client.py
src/embeddings/: __init__.py  ovh_embeddings.py
src/llm/: __init__.py
src/retrieval/: __init__.py  ingestion.py  retriever.py  retrievers.py
src/utils/: __init__.py  logger.py
