[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "cachetools>=6.2.4",
    "crawl4ai>=0.8.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "langchain>=1.2.6",
    "langchain-core>=1.2.7",
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.6",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli[inmem]>=0.4.0",
    "langsmith>=0.6.4",
    "llama-index-core>=0.12.0",
    "lxml>=5.3,<6",
    "nltk>=3.9.2",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "slowapi>=0.1.9",
    "sse-starlette>=2.1.0",
    "supabase>=2.27.2",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
